[package]
name = "arweave_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eyre = "0.6.8"
color-eyre = "0.6.2"
serde = "1.0.188"
serde_derive = "1.0.188"
serde_json = "1.0.107"
base64-url = "2.0.0"
reqwest = { version = "0.11.18", default-features = false, features = ["rustls-tls","json"] }
tokio = { version = "1.9.0", features = ["full"] }
futures = "0.3"
# Faster on MacOS but asm doesn't compile on windows/intel :_(
# sha2 = { version = "0.10.8", features = ["asm"] }
uint = "0.9.5"
rayon = "1.8.0"
lazy_static = "1.4.0"
paris = "1.5.15"
openssl = { version = "0.10.57", features = ["vendored"] }
arweave-randomx-rs = { path = "../arweave-randomx-rs" }

