[package]
name = "arweave_rs_packing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arweave_rs_types = {path = "../types"}
openssl = { version = "0.10.57", features = ["vendored"] }
arweave_rs_randomx = { path = "../../arweave-randomx-rs" }
