[package]
name = "arweave_rs_types"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Contains the run time types for validating Arweave block headers (including deserialization methods)."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eyre = "0.6.8"
color-eyre = "0.6.2"
serde = "1.0.188"
serde_derive = "1.0.188"
serde_json = "1.0.107"
base64-url = "2.0.0"
fixed-hash = "0.8.0"
uint = "0.9.5"
openssl = { version = "0.10.57", features = ["vendored"] }
arweave_rs_randomx = { path = "../randomx" }