[package]
name = "arweave_rs_validator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arweave_rs_types = {path = "../types"}
arweave_rs_indexes = {path = "../indexes"}
arweave_rs_vdf = {path = "../vdf"}
arweave_rs_packing = {path = "../packing"}
openssl = { version = "0.10.57", features = ["vendored"] }
eyre = "0.6.8"
color-eyre = "0.6.2"
arweave_rs_randomx = { path = "../../arweave-randomx-rs" }
borsh = "1.3.0"
borsh-derive = "1.3.0"
base64-url = "2.0.0"