[package]
name = "arweave_rs_validator"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Methods for doing PoW pre-validation on Arweave block headers to verify their integrity."
repository = "https://github.com/ThePeopleOfTheNetwork/arweave_rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eyre = "0.6.8"
color-eyre = "0.6.2"
borsh = "1.3.0"
borsh-derive = "1.3.0"
base64-url = "2.0.0"
openssl = { version = "0.10.57", features = ["vendored"] }
arweave_rs_indexes = {path = "../indexes"}
arweave_rs_packing = {path = "../packing"}
arweave_rs_randomx = { path = "../randomx" }
arweave_rs_types = {path = "../types"}
arweave_rs_vdf = {path = "../vdf"}