[package]
name = "arweave_rs_vdf"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arweave_rs_types = {path = "../types"}
rayon = "1.8.0"
openssl = { version = "0.10.57", features = ["vendored"] }
base64-url = "2.0.0"
